--- a/html/packages/game-schedules/templates/schedule-item.html
+++ b/html/packages/game-schedules/templates/schedule-item.html
@@ -22,8 +22,8 @@
 			</ul>
 		</div>
 		
-		<a href="javascript: void(0);" title="show older" class="show-older mobile-link show-older-h"></a>
-		<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h mobile-link right-with-icon"></a>
+		<a href="javascript: void(0);" title="show older" class="common-btn common-default-comment-dark-grey mobile-link show-older-h">Show Older</a>
+		<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h common-btn common-default-game-orange mobile-link right-with-icon">ADD GAME</a>
 		
 	{{/teams}}
 	</div>
