--- a/html/packages/media/templates/image-list.html
+++ b/html/packages/media/templates/image-list.html
@@ -9,4 +9,9 @@
 	</div>
 </div>
 {{/target}}-->
-<div class="clear"><a href="javascript: void(0);" class="see-more-h">More</a></div>
+<div class="clear">
+<a href="javascript: void(0);" title="show older" class="common-btn common-default-comment-dark-grey see-more-h">SHOW MORE</a>	
+	
+	
+	
+	</div>
