--- a/html/packages/media/templates/image-list.html
+++ b/html/packages/media/templates/image-list.html
@@ -10,8 +10,10 @@
 </div>
 {{/target}}-->
 <div class="clear">
-<a href="javascript: void(0);" title="show older" class="common-btn common-default-comment-dark-grey see-more-h">SHOW MORE</a>	
-	
+<a href="javascript: void(0);" title="see more" class="common-btn mobile-link common-default-comment-dark-grey see-more-h">SHOW MORE</a>	
+
+
+<a href="javascript: void(0);" title="see more" class="desktop-link see-more-h">SHOW MORE</a>	
 	
 	
 	</div>
