--- a/html/packages/site/templates/comment-form.html
+++ b/html/packages/site/templates/comment-form.html
@@ -1,4 +1,9 @@
-<a href="javascript: void(0);" title="show older" class="common-btn common-default-comment-red add-comment-h">Add Comment</a>
+
+<a href="javascript: void(0);" title="add comment" class="common-btn mobile-link common-default-comment-red add-comment-h">Add Comment</a>
+
+
+<a href="javascript: void(0);" title="add comment" class="desktop-link add-comment-h">Add Comment</a>
+
 {{#payload}}
 
 <form class="add-comment-form-h hide" method="post" action="#">
