--- a/html/packages/common/templates/add-media-buttons.html
+++ b/html/packages/common/templates/add-media-buttons.html
@@ -1,10 +1,11 @@
+
+<a href="javascript: void(0);" data-page-base="{{data.page_base}}" data-ent-id="{{data.ent_id}}" data-sports-id="{{data.sports_id}}" data-tip-style="qtip-athletez qtip-yellow-c" class="add-image add-icon desktop-link add-image-h" data-content="{{#data.teamName}}Upload images of {{data.teamName}}{{/data.teamName}}{{#data.message}} {{data.message.photo}} {{/data.message}}"></a>
+<a href="javascript: void(0);" data-page-base="{{data.page_base}}" data-ent-id="{{data.ent_id}}" data-sports-id="{{data.sports_id}}" class="add-video add-icon desktop-link add-video-h" data-tip-style="qtip-athletez qtip-red-c" data-content="{{#data.teamName}}Upload images of {{data.teamName}}{{/data.teamName}}{{#data.message.video}} {{data.message.video}} {{/data.message.video}}"></a>
+
+
+
 <a href="javascript: void(0);" data-page-base="{{data.page_base}}" data-ent-id="{{data.ent_id}}" data-sports-id="{{data.sports_id}}" data-tip-style="qtip-athletez qtip-yellow-c" class="add-image common-btn common-default-comment-yellow mobile-link add-image-h" data-content="{{#data.teamName}}Upload images of {{data.teamName}}{{/data.teamName}}{{#data.message}} {{data.message.photo}} {{/data.message}}">ADD PHOTO</a>
 <a href="javascript: void(0);" data-page-base="{{data.page_base}}" data-ent-id="{{data.ent_id}}" data-sports-id="{{data.sports_id}}" class="add-video common-btn mobile-link common-default-comment-red add-video-h" data-tip-style="qtip-athletez qtip-red-c" data-content="{{#data.teamName}}Upload images of {{data.teamName}}{{/data.teamName}}{{#data.message.video}} {{data.message.video}} {{/data.message.video}}">ADD VIDEO</a>
-
-
-
-<a href="javascript: void(0);" data-page-base="{{data.page_base}}" data-ent-id="{{data.ent_id}}" data-sports-id="{{data.sports_id}}" data-tip-style="qtip-athletez qtip-yellow-c" class="add-image desktop-link add-image-h" data-content="{{#data.teamName}}Upload images of {{data.teamName}}{{/data.teamName}}{{#data.message}} {{data.message.photo}} {{/data.message}}"></a>
-<a href="javascript: void(0);" data-page-base="{{data.page_base}}" data-ent-id="{{data.ent_id}}" data-sports-id="{{data.sports_id}}" class="add-video desktop-link add-video-h" data-tip-style="qtip-athletez qtip-red-c" data-content="{{#data.teamName}}Upload images of {{data.teamName}}{{/data.teamName}}{{#data.message.video}} {{data.message.video}} {{/data.message.video}}"></a>
 
 
 
