--- a/html/usercontrols/photo-player/photoPlayer.css
+++ b/html/usercontrols/photo-player/photoPlayer.css
@@ -7,7 +7,7 @@
 	border-radius: 0;
 	-webkit-border-radius: 0;
 	-moz-border-radius: 0;
-	padding: 0;
+	padding: 0 !important;
 	border: none !important;
 }
 
@@ -234,7 +234,7 @@ div.right-arrow-container > img {
 }
 
 .photo-player-main-image {
-	min-height: 380px;
+/*	min-height: 380px;*/
 	max-height: 100%;
 }
 .loading_image {
@@ -247,7 +247,7 @@ div.right-arrow-container > img {
 }
 
 .loading_image img {
-	height: 100%;
+/*	height: 100%;*/
 }
 
 .tags-name {
