--- a/html_build/packages/media/templates/image-list.html
+++ b/html_build/packages/media/templates/image-list.html
@@ -9,4 +9,11 @@
 	</div>
 </div>
 {{/target}}-->
-<div class="clear"><a href="javascript: void(0);" class="see-more-h">More</a></div>
+<div class="clear">
+<a href="javascript: void(0);" title="see more" class="common-btn mobile-link common-default-comment-dark-grey see-more-h">SHOW MORE</a>	
+
+
+<a href="javascript: void(0);" title="see more" class="desktop-link see-more-h">SHOW MORE</a>	
+	
+	
+	</div>
