--- a/html_build/packages/game-schedules/templates/schedule-event-item.html
+++ b/html_build/packages/game-schedules/templates/schedule-event-item.html
@@ -1,5 +1,5 @@
 {{#payload}}
-	<a href="#game/{{id}}" class="{{#result_time}}background-blue{{/result_time}}{{^result_time}}noscore{{/result_time}} team-info-h"><div class="game-info hide">
+	<a href="#!game/{{id}}" class="{{#result_time}}background-blue{{/result_time}}{{^result_time}}noscore{{/result_time}} team-info-h"><div class="game-info hide">
 		<span class="game-header"><span class="game-day">{{event_name}}</span></span>
 		<span class="game-day">{{game_day}}</span><br/>
 		<span class="team-name">{{game_location}}</span><br/>
