--- a/html_build/packages/site/templates/comment-list.html
+++ b/html_build/packages/site/templates/comment-list.html
@@ -2,5 +2,5 @@
 <ul id="comment-list"></ul>
 </div>
 <div class="clear">
-	<a href="javascript: void(0);" class="see-more-h">See More</a>
+			<a href="javascript: void(0);" title="show older" class="common-btn common-default-comment-dark-grey mobile-link see-more-h">Show Older</a>
 </div>
