--- a/html_build/pages/home/templates/menu.html
+++ b/html_build/pages/home/templates/menu.html
@@ -2,6 +2,11 @@
 
 </div>
 
+<h4 class="mobile-link home-page-heading">
+	Search Athletez.com for...
+</h4>
+
+
 <div class="fixed-icons">
 	<ul>
 		<li><a id="image" class="icons restype photos" data-tip-style="qtip-athletez qtip-photo" data-selected-class="photos_selected icon_selected" data-number="1" title="Find Images" href="javascript:void(0);"></a></li>
@@ -14,6 +19,12 @@
 
 
 <div class="clearfix"></div>
+
+
+<h4 class="mobile-link home-page-heading">
+	Filter Results By:
+</h4>
+
 
 <div class="menu-outer-h">
 
