--- a/html/css/app.css
+++ b/html/css/app.css
@@ -990,7 +990,6 @@ a.add-event-h.right-with-icon, a.add-game-h.right-with-icon {
 	background-repeat: no-repeat;
 	padding: 0 0 0 35px;
 	color: #333;
-	display: inline-block;
 	min-height: 25px;
 	margin: 0px 75px 5px 15px;
 	float: right;
@@ -2343,7 +2342,9 @@ li.sport .teamlist-header, .stat-val-outer {
 
 /*  Mobile css    */
 
-@media only screen and (max-width: 480px) {
+@media only screen and (min-width: 767px) {
+    .mobile-link{
+        display: none;}
 }
 
 @media only screen and (min-width: 320px) and (max-width: 767px) {
