--- a/html/css/app.css
+++ b/html/css/app.css
@@ -2595,7 +2595,7 @@ li.sport .teamlist-header, .stat-val-outer {
 	.game-box-outer ul, .game-box-outer a {
 		background: #FFF;
 		border-radius: 0;
-		pointer-events: none;
+		/*pointer-events: none;*/
 		height: auto;
 	}
 
@@ -3254,6 +3254,28 @@ li.sport .teamlist-header, .stat-val-outer {
 	#commenton-wrap .see-more-h {
 		top: 29px !important;
 		position: relative;
+	}
+	
+	#image-wrap-h .image-list {
+		float: left;
+		width: 100%;
+	}
+	
+	#image-wrap-h li.image {
+		padding: 0;
+		margin: 0 5px 10px 5px;
+		width: 45%;
+		min-height: 150px;
+	}
+	
+	#image-wrap-h div.image-item-container {
+		width: 100%;
+		min-height: 150px;
+	}
+	
+	#image-wrap-h div.image-item-container > img {
+		width: 100%;
+		min-height: 150px;		
 	}
 	 
 }
