--- a/html_build/pages/fbinvite/fbinvite.css
+++ b/html_build/pages/fbinvite/fbinvite.css
@@ -54,7 +54,7 @@
     margin: 5px;
     padding: 10px;
     border: 7px solid #dbdbdb;
-    height: 90px;
+    height: auto;
     float: left;
     width:80%;
     max-width:450px;
