--- a/application/templates/index.mustache
+++ b/application/templates/index.mustache
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <!-- {{date_indexed}} -->
 <head><meta charset="utf-8"><title>{{title}}</title>
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta property="twitter:card" content="summary" />
 	<meta property="twitter:site" content="@RealAthletez" />
 	<meta property="twitter:domain" content="athletez.com" />
