--- a/html/css/app.css
+++ b/html/css/app.css
@@ -3104,7 +3104,7 @@ li.sport .teamlist-header, .stat-val-outer {
 		min-height: 20px !important;
 	}
 
-	.show-older-h, .see-more-h, .add-comment-h, .add-image, .add-video, .add-to-list, .invite-from-fb, .add-to-roster-list {
+	.show-older-h, .see-more-h, .add-to-participants, .add-comment-h, .add-image, .add-video, .add-to-list, .invite-from-fb, .add-to-roster-list {
 		width: 38%;
 		float: left;
 		font-size: 13px !important;
@@ -3277,5 +3277,39 @@ li.sport .teamlist-header, .stat-val-outer {
 		width: 100%;
 		min-height: 150px;		
 	}
+	
+	.participants-heading-h > div {
+		width: 100%;
+	}
+	
+	#participants_div ul.image-list {
+		margin: 5px 0 10px 5px;
+	}
+	
+	#participants_div ul li.image {
+		min-height: 150px;
+		padding: 0;
+		width: 50%;
+	}
+	
+	#participants_div div.image-item-container {
+		width: 100%;
+		height: 150px;
+	}
+	
+	#participants_div div.image-item-container > img {
+		min-width: 100%;
+		min-height: 150px;
+	}
+	
+	#participants_div {
+		display: none;
+	}
+	
+	.participants-heading-h .add-to-participants {
+		margin-left: 5px !important;
+		margin-right: 5px !important;
+	}
+	
 	 
 }
