--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -826,7 +826,7 @@ a.add-event-h.right-with-icon, a.add-game-h.right-with-icon {
 	color: #333;
 	
 	min-height: 25px;
-	margin: 0px 75px 5px 15px;
+	margin: 0px 30px 5px 15px;
 	float: right;
 	position: relative;
 	bottom: 5px;
@@ -1791,13 +1791,14 @@ li.sport .teamlist-header, .stat-val-outer {
 	margin-top: 20px;
 }
 .add-participants {
-	background: url(images/icons/add-icons.png) no-repeat;
+	background: url(images/icons/sprite_icons_only_color_64px.png) no-repeat;
 	display: inline-block;
 	width: 70px;
 	height: 36px;
 }
 .add-to-participants {
-	background-position: -162px -53px;
+	background-position: 0px -263px;
+    background-color: #d45c27;
 }
 .invite-participants {
 	background-position: 2px 2px;
@@ -2008,8 +2009,11 @@ li.sport .teamlist-header, .stat-val-outer {
 	}
 	.profile-heading {
 		position: relative;
-		min-height: 175px;
+		min-height: 115px;
 	}
+    .profile-heading div.sports-h img {
+        max-width: 40px;
+    }
 	.profile-heading .sports-h {
 		position: absolute;
 		bottom: 3px;
@@ -2017,15 +2021,17 @@ li.sport .teamlist-header, .stat-val-outer {
 	.profile-heading h3 {
 		position: absolute;
 		top: 0;
-		font-size: 35px;
+		font-size: 30px;
 	}
 	.profile-heading h4 {
-		position: absolute;
-		top: 35px;
+        position: absolute;
+        top: 30px;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
         width: 100%;
+        font-size: 23px;
+        line-height: 33px;
 	}
 	#main-header .profile-pic-outer ul.image-outer-h li.image {
 		margin: 0;
@@ -2199,7 +2205,8 @@ li.sport .teamlist-header, .stat-val-outer {
 		height: 45px;
 	}
 	.invite-from-fb {
-		background-position: -2px -58px;
+		background-position: -2px -54px;
+        background-color: #6b74b7;
 	}
 	.mobile-link {
 		display: block;
@@ -2212,8 +2219,7 @@ li.sport .teamlist-header, .stat-val-outer {
 		background-repeat: no-repeat;
 		cursor: pointer;
 		margin: 2px 0 0 0;
-	}
-	.green-left-heading {
+        padding: 15px 25px;
 		background-position: 80% 60%;
 	}
 	.down-arrow-heading {
@@ -2570,11 +2576,11 @@ li.sport .teamlist-header, .stat-val-outer {
 		margin: 5px 5px 0 0 !important;
 		min-height: 20px !important;
 	}
-	.show-older-h, .see-more-h, .add-comment-h, .add-image, .add-video, .add-to-list, .invite-from-fb, .add-to-roster-list {
+	.show-older-h, .see-more-h, .add-to-participants, .add-comment-h, .add-image, .add-video, .add-to-list, .invite-from-fb, .add-to-roster-list {
 		width: 38%;
 		float: left;
 		font-size: 13px !important;
-		padding: 3% 5% !important;
+		padding: 5% 1% 4% 9% !important;
 		margin: 0 !important;
 		height: auto !important;
 		min-height: 20px;
@@ -2616,18 +2622,22 @@ li.sport .teamlist-header, .stat-val-outer {
 	 
 	 .add-to-list {
 	 	margin: 0 5px 0 5px !important;
-	 	background-position: -7px -7px;
+	 	background-position: -1px -1px;
+         background-color: #1ba0af;
 	 }
 	 
 	 .add-image {
-	 	background-position: -11px -216px;	 	
+	 	background-position: -5px -210px;
+         background-color:#ddd43a;
 	 }
 	 .add-video {
-	 	background-position: -7px -111px;	 	
+	 	background-position: -1px -105px;
+         background-color: #c6373b;
 	 }
 	 
 	 .add-to-roster-list {
-	 	background-position: 7px -163px;	 	
+	 	background-position: 1px -157px;
+         background-color: #928add;
 	 }
 	 .add-to-list, .invite-from-fb, .add-image, .add-video, .add-to-roster-list {
 	 	background-image: url(images/icons/sprite_icons_only_color_64px.png);
@@ -2739,5 +2749,39 @@ li.sport .teamlist-header, .stat-val-outer {
 		width: 100%;
 		min-height: 150px;		
 	}
+	
+	.participants-heading-h > div {
+		width: 100%;
+	}
+	
+	#participants_div ul.image-list {
+		margin: 5px 0 10px 5px;
+	}
+	
+	#participants_div ul li.image {
+		min-height: 150px;
+		padding: 0;
+		width: 50%;
+	}
+	
+	#participants_div div.image-item-container {
+		width: 100%;
+		height: 150px;
+	}
+	
+	#participants_div div.image-item-container > img {
+		min-width: 100%;
+		min-height: 150px;
+	}
+	
+	#participants_div {
+		display: none;
+	}
+	
+	.participants-heading-h .add-to-participants {
+		margin-left: 5px !important;
+		margin-right: 5px !important;
+	}
+	
 	 
 }
