--- a/html/css/app.css
+++ b/html/css/app.css
@@ -2406,7 +2406,7 @@ li.sport .teamlist-header, .stat-val-outer {
 
 	.bubble .content p {
 		float: left;
-		width: 85%;
+		width: 90%;
 		padding: 0;
 		padding-left: 11px;
 	}
@@ -2513,6 +2513,7 @@ li.sport .teamlist-header, .stat-val-outer {
 	.poster-info {
 		float: left;
 		padding-left: 11px;
+		font-weight: normal !important;
 	}
 
 	#image-wrap div.image-item-container {
