--- a/html/css/app.css
+++ b/html/css/app.css
@@ -3392,6 +3392,10 @@ li.sport .teamlist-header, .stat-val-outer {
 		display: none;
 	}
 	
+	.roster-heading-h .buttons-h {
+		margin: 5px 0;
+	}
+	
 	
 	
 	 
