--- a/html/css/app.css
+++ b/html/css/app.css
@@ -3170,15 +3170,23 @@ li.sport .teamlist-header, .stat-val-outer {
 		min-height: 20px !important;
 	}
 
-	.show-older-h, .see-more-h, .add-to-participants, .add-comment-h, .add-image, .add-video, .add-to-list, .invite-from-fb, .add-to-roster-list {
+
+	.show-older-h, .add-event-h, .see-more-h, .add-to-participants, .add-comment-h, .add-image, .add-video, .add-to-list, .invite-from-fb, .add-to-roster-list {
 		width: 38%;
 		float: left;
 		font-size: 13px !important;
 		padding: 5% 1% 4% 9% !important;
 		margin: 0 !important;
 		height: auto !important;
-		min-height: 20px;
+		min-height: 20px !important;
 	}
+
+	.add-event-h {
+		color: #FFF !important;
+		width: 86% !important;
+		margin: 10px 2% !important;
+	}
+
 	
 	.show-older-h {
 		width: 38% !important;
