--- a/html/packages/game-schedules/templates/schedule-list.html
+++ b/html/packages/game-schedules/templates/schedule-list.html
@@ -19,11 +19,11 @@
 </div>
 {{#eventPage}}
 
-	<a href="javascript: void(0);" title="Add an Event / Meet" class="add-event-h mobile-link right-with-icon">Add Event / Meet</a>
+	<a href="javascript: void(0);" title="Add an Event / Meet" class="add-event-h common-btn common-default-game-orange mobile-link right-with-icon">Add Event / Meet</a>
 {{/eventPage}}
 
 {{^eventPage}}
-		<a href="javascript: void(0);" title="show older" class="show-older mobile-link show-older-h">SHOW OLDER</a>
+		<a href="javascript: void(0);" title="show older" class="show-older  mobile-link show-older-h">SHOW OLDER</a>
 		<a href="javascript: void(0);" title="add game" class="add-game-h mobile-link right-with-icon">ADD GAME</a>
 {{/eventPage}}
 
