change bubble width

--- a/html/css/app.css
+++ b/html/css/app.css
@@ -2398,6 +2398,7 @@ li.sport .teamlist-header, .stat-val-outer {
 	.bubble {
 		position: static;
 		background: #FFF;
+        width:95%
 	}
 
 	.bubble .content .comment-date a {
