--- a/html/css/app.css
+++ b/html/css/app.css
@@ -768,6 +768,14 @@ span.ui-helper-hidden-accessible {
 	transform: rotate(15deg);
 }
 
+textarea#new-comment{
+    width: 85%;
+    -webkit-border-radius: 15px;
+    border-radius: 15px;
+    height: 20px;
+    margin-top: 4%;
+}
+
 .see-more-h {
 	float: right;
 	margin: 0 40px 30px 0;
@@ -3203,9 +3211,17 @@ li.sport .teamlist-header, .stat-val-outer {
 		width: 100%;
 		background-image: none;
 	}
+
+    textarea#new-comment{
+        width: 100%;
+        -webkit-border-radius: 0;
+        border-radius: 0;
+        height: 20px;
+        margin-top: 5px;
+    }
 	
 	#commenton-wrap .clear, #comment_div {
-		width: 47%;
+		width: 100%;
 		margin-left: 5px;
 	}
 	
